added play and rules button in the game over screen

--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
     var glitchAnimationBackgroundColor = "orange";
     var playButton = [];
     var rulesButton = [];
-    startGame();
+    startGlitchNDestroy();
 </script>
 <p>Glitch 'n Destroy created by Alessio De Angelis with a lot of fun for <a href src ="http://2016.js13kgames.com/">JS13K</a> </p>
 </body>
